Update Photo Link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<!-- <p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p> -->
 						<nav>
                             <ul>
-                                <li><a href="http://www.jeffsugdenphotography.com" class="icon fa fa-camera"><span class="label">Photography</span></a></li>                               
+                                <li><a href="https://photos.jeffsugden.com" class="icon fa fa-camera"><span class="label">Photography</span></a></li>                               
                                 <li><a href="https://www.linkedin.com/in/jeffsugden" class="icon fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
                                 <li><a href="https://github.com/jeffsugden" class="icon fa fa-github"><span class="label">Github</span></a></li>
                                 <li><a href="https://stackoverflow.com/users/2962200/jeff-sugden" class="icon fa fa-stack-overflow"><span class="label">StackOverflow</span></a>                             
